--- a/www/previous_order.html
+++ b/www/previous_order.html
@@ -1,138 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="">
-   <meta name="author" content="">
-   <title>Home</title>
-   <link href="css/bootstrap.min.css" rel="stylesheet">
-   <link href="css/font-awesome.min.css" rel="stylesheet">
-   <link href="css/animate.min.css" rel="stylesheet">
-   <link href="css/lightbox.css" rel="stylesheet">
-   <link href="css/main.css" rel="stylesheet">
-   <link href="css/responsive.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Home</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/lightbox.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
 
-   <!--[if lt IE 9]>
-   <script src="js/html5shiv.js"></script>
-   <script src="js/respond.min.js"></script>
-   <![endif]-->
-   <link rel="shortcut icon" href="images/ico/favicon.ico">
-   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <!--[if lt IE 9]>
+	    <script src="js/html5shiv.js"></script>
+	    <script src="js/respond.min.js"></script>
+    <![endif]-->
+    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
 
 <body>
    <script type="text/javascript" src="cordova.js"></script>
    <script type="text/javascript" src="js/index.js"></script>
    <script type="text/javascript">
-   app.initialize();
+       app.initialize();
    </script>
-   <header id="header">
-      <div class="navbar navbar-inverse" role="banner">
-         <div class="container">
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-               </button>
-            </div>
-            <div class="collapse navbar-collapse">
-               <ul class="nav navbar-nav navbar-right">
-                  <li><a href="home.html">Home</a></li>
-                  <li><a href="menu.html">Menu</a></li>
-                  <li><a href="view_cart.html">View Cart</a></li>
-                  <li><a href="login.html">Login/Logout</a></li>
-                  <li class="active"><a href="previous_order.html">Previous Orders</a></li>
-                  <li><a href="contact_us.html">Contact Us</a></li>
-               </ul>
-            </div>
-         </div>
-      </div>
-   </header>
-   <!--/#header-->
-   <script type="application/x-javascript">
-   var page = "previous_order";
-   </script>
-   <section id="services">
-      <div class="container">
-         <div class="padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
-            <div class="sidebar blog-sidebar">
-               <div class="sidebar-item recent">
-                  <h3 style="text-align: center;"><font color="Green">Hungry?</font></h3>
-                  <div class="media">
-                     <div class="pull-left">
-                        <a href="menu.html" class="btn btn-common-mine-blue">View<br>Menu</a>
-                     </div>
-                     <div class="media-body sidebar-item-mine-blue">
-                        <h4><a href="menu.html">Here's the deal. It's the simplist way to order your Whatta Burger.</a></h4>
-                        <p><ol>
-                           <li>Browse the menu</li>
-                           <li>Add your items to the cart</li>
-                           <li>Checkout</li>
-                        </ol></p>
-                     </div>
-                  </div>
-                  <div class="media" id="current_promotions">
-                     <div class="pull-left ">
-                        <a href="menu.html" class="btn btn-common-mine-blue">Current<br>Promo's</a>
-                     </div>
-                     <div class="media-body">
-                        <h4><a href="#">Check out our current coupons and promotions.</a></h4>
-                     </div>
-                  </div>
-                  <div class="media">
-                     <div class="pull-left">
-                        <a href="menu.html" class="btn btn-common-mine-blue">Previous<br>Orders</a>
-                     </div>
-                     <div class="media-body">
-                        <h4><a href="#">Check out your previous orders for easy ordering.</a></h4>
-                        <p>
-                           One of the benefits of being a registered user is the option to keep track of your order history.
-                           Keeping track of your order history provides a quick way to order that lunch time meal giving you
-                           some extra time back in your day!
-                        </p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div style="center">
-            <div class="text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
-               <div class="single-service" style="verticle-align: center;">
-                  <h2>Login</h2>
-                  <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
-                     <div class="contact-form bottom">
-                        <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
-                           <div class="form-group">
-                              <input type="email" name="email" class="form-control" required="required" placeholder="Email">
-                           </div>
-                           <div class="form-group">
-                              <input type="password" name="password" class="form-control" required="required" placeholder="Password">
-                           </div>
-                           <div class="form-group">
-                              <input type="submit" name="submit" class="btn btn-primary" value="Login">&nbsp;&nbsp;&nbsp;
-                              <input type="submit" name="submit" class="btn btn-success" value="Register">&nbsp;&nbsp;&nbsp;
-                              <input type="submit" name="submit" class="btn btn-danger" value="Continue As Guest">
-                           </div>
-                        </form>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
-   <!--/#footer-->
+   <style>
+   .container {
+     margin-top: -20px;
+   }
+   </style>
+	<header id="header">
+        <div class="navbar navbar-inverse" role="banner">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
 
-   <script type="text/javascript" src="js/jquery.js"></script>
-   <script type="text/javascript" src="js/bootstrap.min.js"></script>
-   <script type="text/javascript" src="js/lightbox.min.js"></script>
-   <script type="text/javascript" src="js/wow.min.js"></script>
-   <script type="text/javascript" src="js/main.js"></script>
+                    <a href="view_cart.html" style="margin-top: 15px;" class="btn btn-sm btn-default">
+                       <i class="fa fa-shopping-cart"></i>&nbsp;&nbsp;&nbsp;
+                       <span id="cartTotal">$0.00 (0 items)</span>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="view_cart.html">View Cart</a></li>
+                        <li><a href="login.html">Login/Logout</a></li>
+                        <li class="active"><a href="previous_order.html">Previous Orders</a></li>
+                        <li><a href="contact_us.html">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!--/#header-->
+    <script type="application/x-javascript">
+    var page = "previous_order";
+
+    function checkout(orderName) {
+       var orderHistory = JSON.parse(window.localStorage.getItem(PREVIOUS_ORDER_HISTORY));
+
+       for (var i = 0; i < orderHistory.length; i++) {
+    		 var order = orderHistory[i];
+    		 if (order.name == orderName) {
+             window.sessionStorage.setItem(CART_SESSION_KEY, order.cart);
+             window.location.href = "checkout.html";
+          }
+       }
+    }
+
+    function loadPreviousOrders() {
+      var orderHistory = JSON.parse(window.localStorage.getItem(PREVIOUS_ORDER_HISTORY));
+      if (orderHistory === null || orderHistory === undefined) {
+        return;
+      }
+
+      var invalidOrders = []
+      var invalidOrdersCounter = 0;
+
+      for (var i = 0; i < orderHistory.length; i++) {
+   		order = orderHistory[i];
+         var cart = JSON.parse(order.cart);
+
+         // check to see if the item still exists, if not, show modal later
+         var itemExists = true;
+         var cart = JSON.parse(order.cart);
+         for (var x = 0; x < cart.items.length; x++) {
+            if (cart.items[x] === null || cart.items[x] === undefined) {
+               continue
+            }
+            var item = getItemById(cart.items[x].id);
+            if (item === null || item === undefined) {
+               itemExists = false;
+               invalidOrders[invalidOrdersCounter++] = order.name;
+               break;
+            }
+         }
+
+         if (!itemExists) {
+            continue;
+         }
+         var div = "<div class=\"view-cart-item-table\"><div id=\"cart-summary\" class=\"previous-order-top-left\">" +
+            "<p class=\"view-cart-item-header\">" + order.name + "</p>" + loadPreviousOrderCartSummary(JSON.parse(order.cart)) +
+            "</div><div class=\"previous-order-top-right\"><label class=\"checkbox-btn btn btn-large btn-success\" onclick=\"checkout('" + order.name + "')\">" +
+            "<i class=\"fa fa-lock\"></i>&nbsp;&nbsp;Checkout</label><label onclick=\"removeOrder(true, '" + order.name +
+            "'); return false;\" class=\"checkbox-btn btn btn-danger\"><i class=\"fa fa-trash\"></i>&nbsp;&nbsp;Remove</label></div></div><br>";
+         $("#historyTable").append(div);
+   	}
+      if (invalidOrders.length > 0) {
+         // alert
+         var displayString = "<span style=\"color: red\">The following orders contain invalid items and will be removed:<ul>";
+         for (var i = 0; i < invalidOrders.length; i++) {
+            displayString += "<li>" + invalidOrders[i] + "</li>";
+            removeOrder(false, invalidOrders[i]);
+         }
+         displayString += "</ul></span>";
+         $("#modal-message").html(displayString);
+         $("#modal").modal('show');
+      }
+    }
+
+    function removeOrder(reloadPage, orderName) {
+        var orderHistory = JSON.parse(window.localStorage.getItem(PREVIOUS_ORDER_HISTORY));
+
+        // replace it if it already exists
+        for (var i = 0; i < orderHistory.length; i++) {
+           order = orderHistory[i];
+           if (order.name == orderName) {
+              delete orderHistory[i];
+              // reassign the array to remove the null value that took the place of the deleted order
+              var newOrder = [];
+              var newOrderCounter = 0;
+              for (var i = 0; i < orderHistory.length; i++) {
+                 order = orderHistory[i];
+                 if (order === null || order === undefined) {
+                    continue;
+                 }
+                 newOrder[newOrderCounter++] = order;
+              }
+              window.localStorage.setItem(PREVIOUS_ORDER_HISTORY, JSON.stringify(newOrder));
+              if (reloadPage) {
+                 window.location.href = "previous_order.html";
+              }
+           }
+        }
+    }
+
+    function loadPreviousOrderCartSummary(cart) {
+   	var itemList = getItemList();
+      var returnString = "";
+      for (var i =0; i < cart.items.length; i++) {
+   		if (cart.items[i] === null) {
+   			continue;
+   		}
+
+         var item = getItemById(cart.items[i].id);
+         var div = "<div><div class=\"item-cell\">[" + cart.items[i].quantity + "]&nbsp;&nbsp;</div>" +
+               "<div class=\"item-cell\">" + item.name + buildCondimentList(cart.items[i]) + "</div></div>";
+     		returnString += div;
+   	}
+      return returnString;
+   }
+    </script>
+    <script type="text/javascript" src="js/constants.js"></script>
+    <script src="js/menu.js"> </script>
+    <section id="services">
+        <div id="historyTable" class="container" style="margin-top: -70px;">
+           <h2 class="page-header">Order History</h2>
+        </div>
+        <div id="modal" class="modal fade">
+           <div class="modal-dialog">
+            <div class="modal-content">
+               <div class="modal-header">
+                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                 <h4 class="modal-title">Checkout</h4>
+               </div>
+               <div class="modal-body">
+                 <p id="modal-message"></p>
+               </div>
+               <div class="modal-footer">
+                 <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+               </div>
+            </div>
+           </div>
+        </div>
+    </section>
+    <!--/#footer-->
+    <style>
+    .quantity {
+       font-weight: bold;
+    }
+    </style>
+
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/persist-min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/lightbox.min.js"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
