--- a/www/home.html
+++ b/www/home.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="media" id="current_promotions">
                        <div class="pull-left ">
-                          <a href="menu.html" class="btn btn-common-mine-blue">Current<br>Promo's</a>
+                          <a href="promo.html" class="btn btn-common-mine-blue">Current<br>Promo's</a>
                        </div>
                        <div class="media-body">
                           <h4><a href="#">Check out our current coupons and promotions.</a></h4>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="media">
                        <div class="pull-left">
-                          <a href="menu.html" class="btn btn-common-mine-blue">Previous<br>Orders</a>
+                          <a href="previous_order.html" class="btn btn-common-mine-blue">Previous<br>Orders</a>
                        </div>
                        <div class="media-body">
                           <h4><a href="#">Check out your previous orders for easy ordering.</a></h4>
