--- a/www/login.html
+++ b/www/login.html
@@ -120,7 +120,7 @@
                window.localStorage.setItem("user", JSON.stringify(u));
             }
             displayModal("Login", "Login Successful");
-            window.location.href = "index.html";
+            window.location.href = "home.html";
          },
          error: function(jqXHR, textStatus, errorThrown){
             //alert('addWine error: ' + textStatus +' ' + errorThrown + ' ' + JSON.stringify(jqXHR));
