--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@
         <div class="container" style="width: 100;" >
            <div class="center" style="text-align: center">
               <p></p>
-              <p><h2>Welcome to the Whatt-Burger Restaurant Application</h2></p>
+              <p><h2>Welcome to the Whatta-Burger Restaurant Application</h2></p>
               <p>&nbsp;</p>
               <p><img id="loading-image" src="images/loading.gif" alt="Loading..." /></p>
               <p><h3>Please wait while we prepare your menu.</h3></p>
