--- a/www/menu.html
+++ b/www/menu.html
@@ -104,6 +104,24 @@
                 </div>
               </div>
            </div>
+           <div id="closed-modal" class="modal fade">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h4 class="modal-title">Store Closed</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p id="modal-message">
+                       The store is currently closed. You will be able to browse the menu and add items to your cart,
+                       but you will not be able to checkout until the store opens.
+                    </p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-lrg btn-primary" data-dismiss="modal">OK</button>
+                  </div>
+                </div>
+              </div>
+           </div>
         </div>
     </section>
     <!--/#footer-->
