--- a/www/login.html
+++ b/www/login.html
@@ -264,6 +264,10 @@
           }
       });
    }
+
+   function replaceEmail(e) {
+      e.val(e.val().replace(/[^a-zA-Z0-9!#$%&'*+-/=?^_`{|}~]/g, ""));
+   }
    </script>
    <script type="text/javascript" src="js/constants.js"></script>
    <style>
@@ -317,7 +321,7 @@
                <input type="text" name="phone" class="form-control"  maxlength="10" id="txtPhone" required="required" placeholder="Phone Number ie. 1234567890">
             </div>
             <div class="form-group">
-               <input type="email" name="email" class="form-control" maxlength="75" id="txtEmail" required="required" placeholder="Email Id">
+               <input type="email" name="email" onkeyup="replaceEmail($(this));" onblur="replaceEmail($(this));" class="form-control" maxlength="75" id="txtEmail" required="required" placeholder="Email Address">
             </div>
             <div class="form-group">
                <input type="password" name="password-1" id="txtPassword" maxlength="15" class="form-control" required="required" placeholder="Password">
