--- a/www/settings.html
+++ b/www/settings.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="home.html">Home</a></li>
+                        <li class="active"><a href="home.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="view_cart.html">View Cart</a></li>
                         <li><a href="login.html">Login/Logout</a></li>
@@ -66,39 +66,61 @@
     </header>
     <!--/#header-->
     <script type="application/x-javascript">
-    var page = "order_confirmation";
+    var page = "settings";
     </script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script src="js/menu.js"> </script>
-    <section id="services">
-        <div class="container" style="margin-top: -70px;">
-           <div id="accordion-container">
-               <h2 class="page-header">Order Confirmation</h2>
-                  <p>Your order has been submitted. It will be prepared and ready within the next 10-15 minutes.</p>
-                  <p>
-                     Your order confirmation number is <b><span id="orderIdNumber"></span></b>. When picking up your order please reference
-                     the name, <b><span id="orderName"><span></b>.
-                  </p>
-                  <p>Thanks for ordering with us!</p>
-                  <p id="cc-order-note" style="display: none; color: red;">
-                     **NOTE You will see charge on your credit statement from J&K Media Solutions, not the restaurant.
-                     The credit card processing is included as a service with the mobile application to the restaurant.
-                     For any questions, comments or concerns, feel free to contact J&K Media Solutions Support (support@jandkmediasolutions.com).
-                  </p>
-           </div>
-        </div>
-    </section>
-    <script>
-      function loadOrderConfirmText() {
-         $("#orderName").text(getVarFromSession(ORDER_CONFIRMATION_NAME_SESSION_KEY));
-         $("#orderIdNumber").text(getVarFromSession(ORDER_CONFIRMATION_NO_SESSION_KEY));
+    <style>
+    .modal-body {
+       max-height: 300px;
+       overflow-y: auto;
+    }
 
-         var paymentType = getVarFromSession(ORDER_CONFIRMATION_PAYMENT_TYPE_SESSION_KEY);
-         if (paymentType == "credit-card") {
-            $("#cc-order-note").show();
-         }
-      }
-    </script>
+    </style>
+    <section id="services">
+        <div class="container" style="margin-top: -70px;" >
+           <div id="restaurant-list-modal" class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Choose Restaurant Location</h4>
+                        </div>
+                        <div class="modal-body" id="restaurant-modal-body">
+                        </div>
+                    </div>
+                </div>
+            </div>
+           <script>
+
+           function loadAdminSettings() {
+             $("#login-url").text(LOGIN_URL);
+             $("#registration-url").text(REGISTRATION_URL);
+             $("#menu-url").html("<a target=\"_blank\" href=\"" + MENU_URL + "\">" + MENU_URL + "</a>");
+             $("#promo-url").html("<a target=\"_blank\" href=\"" + PROMO_URL + "\">" + PROMO_URL + "</a>");
+             $("#submit-order-url").text(SUBMIT_ORDER_URL);
+             $("#update-password-url").text(UPDATE_PASSWORD_URL);
+             $("#update-user-url").text(UPDATE_USER_INFO_URL);
+             $("#reset-password-url").text(RESET_PASSWORD_URL);
+           }
+           </script>
+           <p>&nbsp;</p>
+           <div class="row home-margin" >
+              <div class="col-xs-12">
+                   <p>
+                      <h2 class="page-header">URL's</h2>
+                      <b>LOGIN_URL:</b><br> <span id="login-url"></span><br><br>
+                      <b>REGISTRATION_URL:</b><br> <span id="registration-url"></span><br><br>
+                      <b>MENU_URL:</b><br> <span id="menu-url"></span><br><br>
+                      <b>PROMO_URL:</b><br> <span id="promo-url"></span><br><br>
+                      <b>SUBMIT_ORDER_URL:</b><br> <span id="submit-order-url"></span><br><br>
+                      <b>UPDATE_PASSWORD_URL:</b><br> <span id="update-password-url"></span><br><br>
+                      <b>UPDATE_USER_INFO_URL:</b><br> <span id="update-user-url"></span><br><br>
+                      <b>RESET_PASSWORD_URL:</b><br> <span id="reset-password-url"></span><br><br>
+                   </p>
+             </div>
+          </div>
+       </div>
+    </section>
     <!--/#footer-->
 
     <script type="text/javascript" src="js/jquery.js"></script>
