added price increases to be built into the store so we can increase prices

--- a/www/home.html
+++ b/www/home.html
@@ -122,6 +122,7 @@
                }
                if (restaurantList.length == 1) {
                   addJsonToSession(RESTAURANT_SESSION_KEY, restaurantList[0]);
+                  calculatePrices();
                }
 
                loadInfo();
